[tool.poetry]
name = "youtube-gif"
version = "0.1.0"
description = ""
authors = ["Kurtis <k.soroka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]
pytube = "^15.0.0"
moviepy = "^1.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
